--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     rev: 3.8.4
     hooks:
     -   id: flake8
-        args: ["hooks", "tests", "{{ cookiecutter.repo_name }}/src"]
+        args: ["src","tests"]
 -   repo: https://github.com/Yelp/detect-secrets
     rev: v0.14.3
     hooks:
